修复了一些问题

--- a/src/AVOne.Server/Pages/App/Downloads/Tasks.razor
+++ b/src/AVOne.Server/Pages/App/Downloads/Tasks.razor
@@ -61,9 +61,7 @@
                         <ItemContent>
                             <MListItemAvatar>
                                 <MIcon Class="blue lighten-1"
-                                        Dark>
-                            mdi-movie
-                        </MIcon>
+                                        Dark>mdi-movie</MIcon>
                     </MListItemAvatar>
                         <MListItemContent>
                             <MListItemTitle>
