添加了插件安装功能

--- a/src/AVOne.Server/Pages/App/Settings/Plugins/AvaliablePlugins.razor
+++ b/src/AVOne.Server/Pages/App/Settings/Plugins/AvaliablePlugins.razor
@@ -1,28 +1,40 @@
  @inherits ProCompontentBase
  @using AVOne.Common.Plugins;
+@using AVOne.Models.Updates;
 
  <MContainer Fluid>
                     <MRow Dense>
                         @foreach (var package in PackageInfos)
                     {
-                            <MCol key="@package.Id" Cols="3" >
-                                <MCard Class="mx-auto my-10" MaxWidth="468" Elevation=8>
+            <MCol key="@package.Id" Xl="2" Lg="3" Md="3" Sm="4">
+                <MCard Class="mx-auto my-2" MaxWidth="468" Elevation=4 OnClick="()=>ShowPackage(package)">
                                     @if (!string.IsNullOrWhiteSpace(package.ImageUrl))
                                     {
-                                        <MImage Src=@package.ImageUrl Class="white--text align-end" Height=180 Gradient="to bottom, rgba(0,0,0,.1), rgba(0,0,0,.5)">
+                                        <MImage Src=@package.ImageUrl Class="white--text align-end" MaxHeight="150"  Gradient="to bottom, rgba(0,0,0,.1), rgba(0,0,0,.5)">
                                             <MCardTitle>@package.Name</MCardTitle>
                                         </MImage>
                                     }
                                     else
                                     {
-                                        <MImage Src="img/logo/material.jpg" Class="white--text align-end" Height=180 Gradient="to bottom, rgba(0,0,0,.1), rgba(0,0,0,.5)">
+                                        <MImage Src="img/logo/material.jpg" Class="white--text align-end" MaxHeight="150" Gradient="to bottom, rgba(0,0,0,.1), rgba(0,0,0,.5)">
                                             <MCardTitle>@package.Name</MCardTitle>
                                         </MImage>
                                     }
 
-                                        <Masa.Blazor.Presets.PBlockText Primary="@package.Description" Tags="@GetPackageTags(package)" Class="pa-2" style="max-width: 300px;"></Masa.Blazor.Presets.PBlockText>
-                            </MCard>
+                                        <Masa.Blazor.Presets.PBlockText Primary="@package.Description" Tags="@GetPackageTags(package)" Class="pa-2" style="max-width: 400px;"></Masa.Blazor.Presets.PBlockText>
+                                </MCard>
                             </MCol>
                     }
                 </MRow>
+                <PluginPackage SelectItem="selectedPackage" Value="_PackageDetailvisible" ValueChanged="val=>_PackageDetailvisible = val" />
 </MContainer>
+
+@code {
+    private bool _PackageDetailvisible = false;
+    private PackageInfo? selectedPackage = null;
+    private void ShowPackage(PackageInfo package)
+    {
+        selectedPackage = package;
+        _PackageDetailvisible = true;
+    }
+}
