--- a/src/AVOne.Server/Pages/App/SystemLogs/SystemLogs.razor
+++ b/src/AVOne.Server/Pages/App/SystemLogs/SystemLogs.razor
@@ -3,7 +3,7 @@
 @using AVOne.Impl.Facade;
 @using AVOne.Models.Systems;
 
-<MList >
+<MList Class="pl-6">
     @foreach (var log in LogFiles)
     {
         <MListItem Href=@log.Href Target="_blank">
