--- a/src/AVOne.Server/Pages/App/Settings/Plugins/PluginsRepository.razor
+++ b/src/AVOne.Server/Pages/App/Settings/Plugins/PluginsRepository.razor
@@ -2,8 +2,7 @@
  @using AVOne.Common.Plugins;
 
 <div class="md-flex flex-no-wrap justify-start pt-6 pl-6">
-                    <span class="text-h5">@T("Settings.Plugin.PluginRepository.Title")</span>
-                    
+                    <span class="text-h5">@T("Settings.Plugin.PluginRepository.Title")</span>                   
                         <MDialog
         @bind-Value="addRepoDialog"
         Width="500">
@@ -38,11 +37,11 @@
                     </ChildContent>
     </MDialog>
                 </div>
-<MList TwoLine
+<MList TwoLine Outlined
        Subheader>
                 @foreach (var repo in PluginRepositories)
                 {
-                    <MListItem>
+                    <MListItem Class="pl-6">
                          <ItemContent>
                         <MListItemContent>
                             <MListItemTitle>@repo.Name</MListItemTitle>
